Feature/vthreads (#5)
* Switch version to 21.

* Replace deprecated methods.

* Update javadoc generation.

* Use virtual threads.

* Use latest doclet versions.